Added testing of importing from externally generated GEDCOM, with resulting fixes.