@@ -18,14 +18,7 @@
 package uk.ac.standrews.cs.valipop.export;
 
 import gedinline.main.GedInlineValidator;
-
-import org.gedcom4j.io.reader.GedcomFileReader;
-import org.gedcom4j.model.Gedcom;
-import org.gedcom4j.parser.GedcomParser;
-import org.gedcom4j.validate.ValidationResults;
-import org.gedcom4j.validate.Validator;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import uk.ac.standrews.cs.valipop.export.gedcom.GEDCOMPopulationAdapter;
 import uk.ac.standrews.cs.valipop.export.gedcom.GEDCOMPopulationWriter;
@@ -33,7 +26,9 @@ import uk.ac.standrews.cs.valipop.simulationEntities.IPartnership;
 import uk.ac.standrews.cs.valipop.simulationEntities.IPerson;
 import uk.ac.standrews.cs.valipop.simulationEntities.IPersonCollection;
 
-import java.io.*;
+import java.io.File;
+import java.io.IOException;
+import java.io.PrintWriter;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -57,7 +52,7 @@ public abstract class GEDCOMTest extends PopulationExportTest {
         generated_output_file1 = Files.createTempFile(temp_dir, null, INTENDED_SUFFIX);
         generated_output_file2 = Files.createTempFile(temp_dir,null, INTENDED_SUFFIX);
 
-        expected_output_file = Paths.get(TEST_DIRECTORY_PATH_STRING, "gedcom", file_name_root + INTENDED_SUFFIX);
+        expected_output_file = Path.of(TEST_DIRECTORY_PATH_STRING, "gedcom", file_name_root + INTENDED_SUFFIX);
     }
 
     public GEDCOMTest(final IPersonCollection population) {
